<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Main" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_reset"
        android:title="@string/action_reset"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_save_to_database"
        android:title="@string/action_save_to_database"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_open_from_database"
        android:title="@string/action_open_from_database"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_save"
        android:title="@string/action_save"
        android:orderInCategory="100"
        android:showAsAction="never" />

</menu>
