<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/rlayout"
    tools:context=".Main$PlaceholderFragment"
    >

    <TableLayout
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tableLayout">
        <TableRow>
            <EditText android:id="@+id/edit_name_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/edit_name_1"
                android:layout_weight ="1"
                android:layout_column="1"
                android:maxLength="8"/>
            <EditText android:id="@+id/edit_name_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/edit_name_2"
                android:layout_weight ="1"
                android:layout_column="2"
                android:maxLength="8"/>
        </TableRow>
        <TableRow>
            <EditText android:id="@+id/edit_name_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/edit_name_3"
                android:layout_weight ="1"
                android:layout_column="1"
                android:maxLength="8"/>
            <EditText android:id="@+id/edit_name_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/edit_name_4"
                android:layout_weight ="1"
                android:layout_column="2"
                android:maxLength="8"/>
        </TableRow>

        </TableLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Loje E Re"
        android:id="@+id/newButton"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentRight="true"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Loja E Fundit"
        android:id="@+id/openButton"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/newButton"/>

</RelativeLayout>
